--- a/Ableism/Base.lproj/Main.storyboard
+++ b/Ableism/Base.lproj/Main.storyboard
@@ -9,29 +9,91 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--List-->
-        <scene sceneID="RkB-vK-rHn">
+        <!--Add Location View Controller-->
+        <scene sceneID="z6i-a7-y60">
             <objects>
-                <viewController id="nGn-ST-nHU" sceneMemberID="viewController">
+                <viewController id="dfV-GZ-TeY" customClass="AddLocationViewController" customModule="Ableism" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="4gY-m5-dLw"/>
-                        <viewControllerLayoutGuide type="bottom" id="HyX-Of-Pdn"/>
+                        <viewControllerLayoutGuide type="top" id="o0P-jG-Dtk"/>
+                        <viewControllerLayoutGuide type="bottom" id="XUM-yK-k1Y"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="yCI-Ku-vhV">
+                    <view key="view" contentMode="scaleToFill" id="SKK-P5-j9Y">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zV2-Dc-PYD">
+                                <rect key="frame" x="0.0" y="44" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8dA-Ub-xcE">
+                                <rect key="frame" x="286" y="207" width="24" height="24"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="cancel.png"/>
+                            </button>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7l8-ri-tLx">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <color key="barTintColor" red="0.23018704354763031" green="0.77713233232498169" blue="0.3158949613571167" alpha="1" colorSpace="calibratedRGB"/>
+                                <items>
+                                    <navigationItem id="j7v-ul-rvO"/>
+                                </items>
+                            </navigationBar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nEA-DB-7st">
+                                <rect key="frame" x="85" y="132" width="205" height="174"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.90823972225189209" green="0.92638683319091797" blue="0.9317171573638916" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                    <connections>
+                        <outlet property="imageView" destination="nEA-DB-7st" id="ITC-pT-QUx"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="N9l-PD-rbe" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1546.4000000000001" y="-346.77661169415296"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="ARP-j5-pMl">
+            <objects>
+                <tableViewController id="axj-C2-m8E" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="106" sectionHeaderHeight="28" sectionFooterHeight="28" id="yyL-2M-y1O">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="List" image="listbullets.png" id="0la-0x-NIp"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ORA-rC-m3O" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="106" id="jGS-73-JPA">
+                                <rect key="frame" x="0.0" y="28" width="375" height="106"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="jGS-73-JPA" id="iXr-7D-3BU">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="105.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7GI-9Z-pVf">
+                                            <rect key="frame" x="8" y="0.0" width="105" height="94"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        </imageView>
+                                    </subviews>
+                                </tableViewCellContentView>
+                                <color key="backgroundColor" red="0.90823972225189209" green="0.92638683319091797" blue="0.9317171573638916" alpha="1" colorSpace="calibratedRGB"/>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="axj-C2-m8E" id="fFm-zo-r80"/>
+                            <outlet property="delegate" destination="axj-C2-m8E" id="uod-3W-CyM"/>
+                        </connections>
+                    </tableView>
+                    <tabBarItem key="tabBarItem" title="Item" id="wXV-y1-VLK"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="deb-2q-9Pj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-615" y="-508"/>
+            <point key="canvasLocation" x="-615.20000000000005" y="-554.57271364317842"/>
         </scene>
         <!--Find-->
         <scene sceneID="VqR-7h-ACw">
             <objects>
-                <viewController id="qdv-Kr-UJY" sceneMemberID="viewController">
+                <viewController id="qdv-Kr-UJY" customClass="FindViewController" customModule="Ableism" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="dlK-9k-IyH"/>
                         <viewControllerLayoutGuide type="bottom" id="307-x4-Ore"/>
@@ -39,13 +101,36 @@
                     <view key="view" contentMode="scaleToFill" id="gE6-ia-9GM">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Fwq-3s-Nnn">
+                                <rect key="frame" x="0.0" y="269" width="375" height="349"/>
+                            </mapView>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="50e-8g-usO">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <color key="barTintColor" red="0.23018704354763031" green="0.77713233232498169" blue="0.3158949613571167" alpha="1" colorSpace="calibratedRGB"/>
+                                <items>
+                                    <navigationItem id="QBK-Ih-tDJ">
+                                        <barButtonItem key="rightBarButtonItem" image="add.png" id="43B-aR-i2j">
+                                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                        </subviews>
+                        <color key="backgroundColor" red="0.90823972225189209" green="0.92638683319091797" blue="0.9317171573638916" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="307-x4-Ore" firstAttribute="top" secondItem="Fwq-3s-Nnn" secondAttribute="bottom" id="KR3-70-dmZ"/>
+                            <constraint firstAttribute="trailing" secondItem="Fwq-3s-Nnn" secondAttribute="trailing" id="bcr-uj-FyW"/>
+                            <constraint firstItem="Fwq-3s-Nnn" firstAttribute="leading" secondItem="gE6-ia-9GM" secondAttribute="leading" id="mG9-Fz-erI"/>
+                            <constraint firstItem="Fwq-3s-Nnn" firstAttribute="top" secondItem="dlK-9k-IyH" secondAttribute="bottom" constant="249" id="rqX-oa-es6"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Find" image="map.png" id="4cm-70-pIq"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0tF-7X-fEi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-614" y="-1230"/>
+            <point key="canvasLocation" x="-615.20000000000005" y="-1230.1349325337333"/>
         </scene>
         <!--Tab Bar View Controller-->
         <scene sceneID="BLL-ja-ww8">
@@ -59,10 +144,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <color key="selectedImageTintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
                         <segue destination="qdv-Kr-UJY" kind="relationship" relationship="viewControllers" id="VhL-u2-KpA"/>
-                        <segue destination="nGn-ST-nHU" kind="relationship" relationship="viewControllers" id="Cms-Dc-lRZ"/>
+                        <segue destination="axj-C2-m8E" kind="relationship" relationship="viewControllers" id="Och-Iz-gHx"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5h1-0g-TPH" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -71,7 +157,8 @@
         </scene>
     </scenes>
     <resources>
-        <image name="listbullets.png" width="24" height="24"/>
+        <image name="add.png" width="24" height="24"/>
+        <image name="cancel.png" width="24" height="24"/>
         <image name="map.png" width="24" height="24"/>
     </resources>
 </document>
